# 66

./: README.md
Desktop/analytics/: .gitignore  README.md
Desktop/analytics/Dashboard/: README.md  app.py  export.py  pyproject.toml  requirements.txt
Desktop/analytics/Dashboard/assets/: style.css
Desktop/analytics/Dashboard/data/: monthly_feedback_ratings.csv  onboarding_tracking_report1.xlsx  productivity_impact_report.xlsx
Desktop/analytics/Dashboard/src/python/: FrontEnd.py
Desktop/analytics/Dashboard/src/python/Backend/: DataHandling.py  T1OverviewBackEnd.py  T2RetentionBreakdown.py  T3UserDemographics.py  T4FunctionUsage.py  T5UserFeedback.py  VisualVariables.py
Desktop/analytics/Dashboard/static_html_exports/: initial_view_tab1_overview.html  tab_2_retention_breakdown_view.html  tab_3_user_demographics_view.html  tab_4_usage_analytics_view.html  tab_5_user_feedback_view.html
Desktop/analytics/Dashboard/testingSpace/: test.ipynb
Desktop/analytics/node-js-analytics/: .env.sample  InternOverhaul.md  README.md  generate-conversion-rate.js  generate-onboarding-tracker-report.js  helpers.js  run-feedback-report.js  run-productivity-report.js
Desktop/analytics/node-js-analytics/Config/: clients.js  constants.js  load-env.js
Desktop/analytics/node-js-analytics/communication/: cliq.js  slack.js
Desktop/analytics/python-analysis/: english_feedback.csv  feedback.csv  feedback_analysis.ipynb  impact_data.csv  impact_data_2.csv  pyproject.toml
Desktop/analytics/tests/: onboardingReport.spec.js
Desktop/ceshi/hengDaProject/: all_golds.csv  db.sqlite3
(+54 files in other folders)
