[project]
name = "dashboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dash (>=3.0.4,<4.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "datetime (>=5.5,<6.0)",
    "playwright (>=1.52.0,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
