[tool.poetry]
name = "analytics"
version = "0.1.0"
description = ""
authors = ["Jeremy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
nltk = "^3.8.1"
scikit-learn = "^1.4.2"
wordcloud = "^1.9.3"
notebook = "^7.1.3"
langdetect = "^1.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
